--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,22 +4,17 @@ Title: Imputing censored covariates with distributional regression - gamlss
 Version: 0.1.0
 Author: Tim Ruhkopf, Petros Chrstanas
 Maintainer: Tim Ruhkopf <tim.ruhkopf@outlook.de>, Petros Christanas <petroschristanas@gmail.com> 
-Description: Impute censored covariates with distributional regression - gamlss
-    uses the "mice" algorithm with gamlss to impute missing values.
-    Includs estimates of the model and diagnostics about the censored 
-    and imputed values.
+Description: Impute censored/missing covariates with distributional regression (gamlss)
 License: GPL-2
 Encoding: UTF-8
 URL: https://github.com/TiStat/Imputegamlss.git
 LazyData: true
 Imports:
     dplyr,
-    ggvis,
     ggplot2,
     gamlss
 Suggests:
     dplyr,
-    ggvis,
     ggplot2,
     gamlss
 RoxygenNote: 6.1.0
