--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,9 @@
 S3method(plot,imputed)
 S3method(print,imputed)
 S3method(summary,imputed)
+export(andrew.imputed)
 export(family_fun)
 export(imputex)
 export(interpretdamage)
 export(samplecensored)
 export(simulateData)
-exportMethods("")
