ffamily corrected subset condition in simulateData made to as.formula(...) in simulateData ..... all(param.frame$sigma > 0 ) andrew included @return

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,6 @@ S3method(summary,imputed)
 export(andrew)
 export(family_fun)
 export(imputex)
-export(interpretdamage)
 export(samplecensored)
 export(simulateData)
+export(simulatedefect)
