--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,3 +10,6 @@ export(imputex)
 export(samplecensored)
 export(simulateData)
 export(simulatedefect)
+import(gamlss)
+import(ggplot2)
+import(gridExtra)
