--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,10 +11,9 @@ License: GPL-2
 Encoding: UTF-8
 URL: https://github.com/TiStat/Imputegamlss.git
 LazyData: true
-Depends:
-    gamlss,
-    ggplot2
 Imports:
+    gamlss,
+    ggplot2,
     reshape2, 
     MASS,
     gridExtra
