--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ License: GPL-2
 Encoding: UTF-8
 URL: https://github.com/TiStat/Imputegamlss.git
 LazyData: true
+Depends: R (>= 3.4.0)
 Imports:
     gamlss,
     ggplot2,
