--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,9 +11,9 @@ License: GPL-2
 Encoding: UTF-8
 URL: https://github.com/TiStat/Imputegamlss.git
 LazyData: true
-Depends: R (>= 3.4.0)
+Depends:
+    gamlss
 Imports:
-    gamlss,
     ggplot2,
     reshape2, 
     MASS,
